--- a/package.json
+++ b/package.json
@@ -6,9 +6,24 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@visx/group": "^1.7.0",
+    "@visx/mock-data": "^1.7.0",
+    "@visx/scale": "^1.11.1",
+    "@visx/shape": "^1.12.0",
+    "@vx/axis": "0.0.199",
+    "@vx/event": "0.0.199",
+    "@vx/gradient": "0.0.199",
+    "@vx/grid": "0.0.199",
+    "@vx/mock-data": "0.0.199",
+    "@vx/shape": "0.0.199",
+    "@vx/tooltip": "0.0.199",
+    "d3-array": "^3.0.1",
+    "d3-time-format": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "typescript": "^4.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/d3-array": "^2.12.1",
+    "@types/d3-time-format": "^3.0.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
